--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -34,7 +34,7 @@ tasks:
     cmds:
       - for: { var: DIR }
         cmd: >
-          kustomize build {{.ITEM}} | yq -e 'select(.kind == "Namespace")' | kubectl apply --server-side --field-manager bootstrap --force-conflicts -f -
+          kustomize build {{.ITEM}} | yq ea -e 'select(.kind == "Namespace")' | kubectl apply --server-side --field-manager bootstrap --force-conflicts -f -
     vars:
       DIR:
         sh: find "kubernetes/apps" -mindepth 1 -maxdepth 1 -type d
