--- a/kubernetes/apps/kube-system/cilium/app/networking.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/networking.yaml
@@ -8,6 +8,7 @@ spec:
   allowFirstLastIPs: "No"
   blocks:
     - cidr: 10.1.10.0/24
+    - cidr: 10.1.20.0/24
     - cidr: 172.16.3.0/24
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumbgpadvertisement_v2.json
@@ -55,7 +56,7 @@ spec:
       peers:
         - name: unifi
           peerASN: 64513
-          peerAddress: 10.1.10.1
+          peerAddress: 10.1.20.1
           peerConfigRef:
             name: l3-bgp-peer-config
 ---
@@ -65,7 +66,7 @@ metadata:
   name: kube-api
   annotations:
     external-dns.alpha.kubernetes.io/hostname: k8s.noms.tv
-    lbipam.cilium.io/ips: 10.1.10.50
+    lbipam.cilium.io/ips: 10.1.20.10
 spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
