--- a/kubernetes/apps/kube-system/multus/networks/services.yaml
+++ b/kubernetes/apps/kube-system/multus/networks/services.yaml
@@ -7,16 +7,16 @@ spec:
   config: |-
     {
       "cniVersion": "0.3.1",
-      "name": "internal",
+      "name": "services",
       "plugins": [
         {
           "type": "macvlan",
-          "master": "bond0.10",
+          "master": "bond0",
           "mode": "bridge",
           "ipam": {
             "type": "static",
             "routes": [
-              { "dst": "0.0.0.0/0", "gw": "10.1.10.1" }
+              { "dst": "0.0.0.0/0", "gw": "10.1.20.1" }
             ]
           }
         },
