--- a/kubernetes/apps/kube-system/multus/networks/kustomization.yaml
+++ b/kubernetes/apps/kube-system/multus/networks/kustomization.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./iot.yaml
-  - ./internal.yaml
-  - ./services.yaml
-  - ./vpn.yaml
+  - iot.yaml
+  - internal.yaml
+  - services.yaml
+  - vpn.yaml
