--- a/kubernetes/apps/home/mosquitto/app/helmrelease.yaml
+++ b/kubernetes/apps/home/mosquitto/app/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
       app:
         type: LoadBalancer
         annotations:
-          lbipam.cilium.io/ips: 172.16.1.74, ::ffff:172.16.1.74
+          lbipam.cilium.io/ips: 10.1.20.21
         ports:
           mqtt:
             port: *port
