feat: Deploy Kometa

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ./bazarr/ks.yaml
   - ./huntarr/ks.yaml
   - ./jellyseerr/ks.yaml
+  - ./kometa/ks.yaml
   - ./music-assistant/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
