--- a/kubernetes/apps/media/kometa/app/externalsecret.yaml
+++ b/kubernetes/apps/media/kometa/app/externalsecret.yaml
@@ -105,7 +105,7 @@ spec:
                 region: null
             tautulli:
                 url: http://tautulli.media.svc.cluster.local:8181
-                apikey: {{ .TautulliToken }}
+                apikey: {{ .TautulliAPIKey }}
             omdb:
                 apikey: {{ .omdbApiKey }}
                 cache_expiration: 60
