--- a/kubernetes/apps/external-secrets/external-secrets/ks.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/ks.yaml
@@ -6,9 +6,8 @@ metadata:
   name: &app external-secrets
   namespace: &namespace external-secrets
 spec:
-  commonMetadata:
-    labels:
-      app.kubernetes.io/name: *app
+  dependsOn:
+    - name: onepassword-connect
   interval: 30m
   path: ./kubernetes/apps/external-secrets/external-secrets/app
   postBuild:
