--- a/kubernetes/apps/media/kometa/ks.yaml
+++ b/kubernetes/apps/media/kometa/ks.yaml
@@ -10,6 +10,8 @@ spec:
   dependsOn:
     - name: volsync
       namespace: volsync-system
+    - name: external-secrets
+      namespace: external-secretss
   interval: 30m
   path: ./kubernetes/apps/media/kometa/app
   postBuild:
