--- a/kubernetes/apps/media/kometa/ks.yaml
+++ b/kubernetes/apps/media/kometa/ks.yaml
@@ -11,7 +11,7 @@ spec:
     - name: volsync
       namespace: volsync-system
     - name: external-secrets
-      namespace: external-secretss
+      namespace: external-secrets
   interval: 30m
   path: ./kubernetes/apps/media/kometa/app
   postBuild:
