--- a/kubernetes/apps/media/kometa/app/cronjob.yaml
+++ b/kubernetes/apps/media/kometa/app/cronjob.yaml
@@ -23,7 +23,7 @@ spec:
               volumeMounts:
                 - name: pvc
                   mountPath: /config
-                - name: kometa-config
+                - name: config
                   mountPath: /config/config.yml
                   subPath: config.yml
                   readOnly: true
