--- a/kubernetes/apps/media/kometa/app/cronjob.yaml
+++ b/kubernetes/apps/media/kometa/app/cronjob.yaml
@@ -20,6 +20,13 @@ spec:
               env:
                 - name: KOMETA_CONFIG
                   value: /config/config.yml
+              defaultPodOptions:
+                securityContext:
+                  runAsNonRoot: true
+                  runAsUser: 1000
+                  runAsGroup: 1000
+                  fsGroup: 1000
+                  fsGroupChangePolicy: OnRootMismatch
               volumeMounts:
                 - name: pvc
                   mountPath: /config
