fix: Config URLs

--- a/kubernetes/apps/media/kometa/app/externalsecret.yaml
+++ b/kubernetes/apps/media/kometa/app/externalsecret.yaml
@@ -104,13 +104,13 @@ spec:
                 cache_expiration: 60
                 region: null
             tautulli:
-                url: http://tautulli.media.svc.cluster.local:8181
+                url: http://tautulli
                 apikey: {{ .TautulliAPIKey }}
             omdb:
                 apikey: {{ .omdbApiKey }}
                 cache_expiration: 60
             radarr:
-                url: http://radarr.media.svc.cluster.local:7878
+                url: http://radarr
                 token: {{ .RadarrAPIKey }}
                 root_folder_path: /PlexMedia/Movies
                 quality_profile: UHD - Trash - Auto
@@ -126,7 +126,7 @@ spec:
                 plex_path: null
                 monitor_existing: false
             sonarr:
-                url: http://sonarr.media.svc.cluster.local:8989
+                url: http://sonarr
                 token: {{ .SonarrAPIKey }}
                 root_folder_path: /PlexMedia/TV
                 quality_profile: Bluray-2160p
