--- a/kubernetes/apps/media/kometa/app/cronjob.yaml
+++ b/kubernetes/apps/media/kometa/app/cronjob.yaml
@@ -17,6 +17,7 @@ spec:
             - name: kometa
               image: kometateam/kometa:v2.2.2@sha256:32992226d1a505da3ed5d4e9c97bed8a6deb7aef36cd5ef8b1f519762607df45
               args: [ "--run", "--read-only-config" ]
+              concurrencyPolicy: Forbid
               env:
                 - name: KOMETA_CONFIG
                   value: /config/config.yml
