--- a/kubernetes/apps/media/audiobookshelf/app/helmrelease.yaml
+++ b/kubernetes/apps/media/audiobookshelf/app/helmrelease.yaml
@@ -3,12 +3,12 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app audiobookshelf
+  name: audiobookshelf
 spec:
   interval: 30m
   chartRef:
     kind: OCIRepository
-    name: app-template
+    name: audiobookshelf
   install:
     remediation:
       retries: -1
@@ -18,7 +18,7 @@ spec:
       retries: 3
   values:
     controllers:
-      *app :
+      audiobookshelf:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
@@ -26,6 +26,8 @@ spec:
             image:
               repository: ghcr.io/advplyr/audiobookshelf
               tag: 2.30.0@sha256:6fbd7dc95d53c6e168ce69e760b87c334e3b9ba88bf7b8531ed5a116d5d6da03
+            env:
+              BACKUP_PATH: /config/backups
             probes:
               liveness: &probes
                 enabled: true
@@ -37,6 +39,17 @@ spec:
                   periodSeconds: 10
               readiness: *probes
               startup: *probes
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities: {drop: ["ALL"]}
+    defaultPodOptions:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
     service:
       app:
         ports:
@@ -52,15 +65,10 @@ spec:
             sectionName: https
     persistence:
       config:
-        existingClaim: *app
-        advancedMounts:
-          *app :
-            main:
-              - path: /config
-                subPath: config
-              - path: /metadata
-                subPath: metadata
-      data:
+        existingClaim: "{{ .Release.Name }}"
+      media:
         type: nfs
         server: truenas.internal
         path: /mnt/BigPool/Media
+      metadata:
+        existingClaim: "{{ .Release.Name }}-cache"
