--- a/kubernetes/apps/media/music-assistant/ks.yaml
+++ b/kubernetes/apps/media/music-assistant/ks.yaml
@@ -3,12 +3,8 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app music-assistant
-  namespace: &namespace media
+  name: music-assistant
 spec:
-  commonMetadata:
-    labels:
-      app.kubernetes.io/name: *app
   components:
     - ../../../../components/volsync
   dependsOn:
@@ -18,7 +14,7 @@ spec:
   path: ./kubernetes/apps/media/music-assistant/app
   postBuild:
     substitute:
-      APP: *app
+      APP: music-assistant
       VOLSYNC_CAPACITY: 5Gi
   prune: true 
   retryInterval: 1m
@@ -26,6 +22,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: *namespace
+  targetNamespace: media
   timeout: 5m
   wait: false
