fix: Service name

--- a/kubernetes/apps/network/netbootxyz/app/helmrelease.yaml
+++ b/kubernetes/apps/network/netbootxyz/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
             sectionName: https
         rules:
           - backendRefs:
-              - name: app
+              - name: netbootxyz
                 port: *web_port
     persistence:
       config:
