--- a/kubernetes/apps/default/karakeep/app/externalsecret.yaml
+++ b/kubernetes/apps/default/karakeep/app/externalsecret.yaml
@@ -13,11 +13,12 @@ spec:
     template:
       engineVersion: v2
       data:
-        DISABLE_SIGNUPS: "false"
-        EMAIL_VERIFICATION_REQUIRED: "false"
+        DISABLE_SIGNUPS: "true"
+        EMAIL_VERIFICATION_REQUIRED: "true"
         MEILI_MASTER_KEY: "{{ .melliMasterKey }}"
         NEXTAUTH_SECRET: "{{ .nextauthSecret }}"
         NEXTAUTH_URL: "{{ .nextAuthURL }}"
+        OAUTH_ALLOW_DANGEROUS_EMAIL_ACCOUNT_LINKING: "true"
         OAUTH_CLIENT_ID: "{{ .oidClientID }}"
         OAUTH_CLIENT_SECRET: "{{ .oidClientSecret }}"
         OAUTH_PROVIDER_NAME: "SSO"
