--- a/kubernetes/apps/default/karakeep/meilisearch/helmrelease.yaml
+++ b/kubernetes/apps/default/karakeep/meilisearch/helmrelease.yaml
@@ -63,4 +63,4 @@ spec:
       data:
         existingClaim: "{{ .Release.Name }}"
         globalMounts:
-          - /meili_data
+          - path: /meili_data
