chore: Move AI to OpenAI

--- a/kubernetes/apps/default/mealie/app/externalsecret.yaml
+++ b/kubernetes/apps/default/mealie/app/externalsecret.yaml
@@ -25,10 +25,9 @@ spec:
         POSTGRES_SERVER: pooler-main-rw.databases
         POSTGRES_PORT: "5432"
         # AI Settings
-        OPENAI_BASE_URL: "http://ollama.ai.svc.cluster.local:11434/v1"
-        OPENAI_API_KEY: unused
+        OPENAI_API_KEY: "{{ .openAIKey }}"
         OPENAI_ENABLE_IMAGE_SERVICES: "true"
-        OPENAI_MODEL: llama3.2
+        OPENAI_MODEL: gpt-4o-mini
         # OIDC Login
         OIDC_AUTH_ENABLED: "true"
         OIDC_SIGNUP_ENABLED: "true"
