--- a/kubernetes/apps/home/homeassistant/app/pvc.yaml
+++ b/kubernetes/apps/home/homeassistant/app/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: home-assistant-cache
+  name: homeassistant-cache
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
