--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -8,6 +8,7 @@ components:
 resources:
   - ./namespace.yaml
   - ./actual-budget/ks.yaml
+  - ./amp/ks.yaml
   - ./gitea/ks.yaml
   - ./homepage/ks.yaml
   - ./immich/ks.yaml
