fix: Move MAC address

--- a/kubernetes/apps/default/amp/app/helmrelease.yaml
+++ b/kubernetes/apps/default/amp/app/helmrelease.yaml
@@ -17,11 +17,13 @@ spec:
     remediation:
       retries: 3
   values:
+    defaultPodOptions:
+      annotations:
+        cni.cilium.io/mac-address: bd:ad:d6:fd:03:f0
     controllers:
       amp:
         annotations:
           reloader.stakater.com/auto: "true"
-          cni.cilium.io/mac-address: bd:ad:d6:fd:03:f0
         containers:
           app:
             image:
