--- a/kubernetes/apps/default/amp/app/helmrelease.yaml
+++ b/kubernetes/apps/default/amp/app/helmrelease.yaml
@@ -46,6 +46,9 @@ spec:
               readiness: *probes
     service:
       app:
+        type: LoadBalancer
+        annotations:
+          lbipam.cilium.io/ips: 10.1.20.23
         ports:
           http:
             port: *port
