chore: Update all app ParentRefs

--- a/kubernetes/apps/databases/pgadmin/app/helmrelease.yaml
+++ b/kubernetes/apps/databases/pgadmin/app/helmrelease.yaml
@@ -54,7 +54,7 @@ spec:
         hostnames:
           - "{{ .Release.Name }}.noms.tv"
         parentRefs:
-          - name: envoy
+          - name: envoy-internal
             namespace: network
             sectionName: https
     persistence:
