--- a/kubernetes/apps/default/gitea/app/helmrelease.yaml
+++ b/kubernetes/apps/default/gitea/app/helmrelease.yaml
@@ -49,7 +49,7 @@ spec:
         hostnames:
           - "git.noms.tv"
         parentRefs:
-          - name: envoy
+          - name: envoy-internal
             namespace: network
             sectionName: https
     persistence:
