--- a/kubernetes/apps/default/paperless/ai/helmrelease.yaml
+++ b/kubernetes/apps/default/paperless/ai/helmrelease.yaml
@@ -50,6 +50,6 @@ spec:
         hostnames:
           - "{{ .Release.Name }}.noms.tv"
         parentRefs:
-          - name: envoy
+          - name: envoy-internal
             namespace: network
             sectionName: https
