--- a/kubernetes/apps/authentication/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/authentication/authentik/app/externalsecret.yaml
@@ -38,7 +38,7 @@ spec:
                   enabled: true
                   hostnames: ["{{ .hostname }}"]
                   parentRefs:
-                    - name: envoy
+                    - name: envoy-internal
                       namespace: network
                       sectionName: https
             postgresql:
