--- a/kubernetes/apps/default/actual-budget/app/helmrelease.yaml
+++ b/kubernetes/apps/default/actual-budget/app/helmrelease.yaml
@@ -63,7 +63,7 @@ spec:
         hostnames:
           - "budget.noms.tv"
         parentRefs:
-          - name: envoy
+          - name: envoy-internal
             namespace: network
             sectionName: https
     persistence:
