--- a/kubernetes/apps/default/lubelogger/app/helmrelease.yaml
+++ b/kubernetes/apps/default/lubelogger/app/helmrelease.yaml
@@ -54,7 +54,7 @@ spec:
         hostnames:
           - "cars.noms.tv"
         parentRefs:
-          - name: envoy
+          - name: envoy-internal
             namespace: network
             sectionName: https
     persistence:
