--- a/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
         hostnames:
           - "{{ .Release.Name }}.noms.tv"
         parentRefs:
-          - name: envoy
+          - name: envoy-internal
             namespace: network
             sectionName: https
         rules:
