--- a/kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   hostnames: ["flux-webhook.noms.tv"]
   parentRefs:
-    - name: envoy
+    - name: envoy-internal
       namespace: network
       sectionName: https
   rules:
