--- a/kubernetes/apps/home/node-red/app/helmrelease.yaml
+++ b/kubernetes/apps/home/node-red/app/helmrelease.yaml
@@ -55,7 +55,7 @@ spec:
         hostnames:
           - "{{ .Release.Name }}.noms.tv"
         parentRefs:
-          - name: envoy
+          - name: envoy-internal
             namespace: network
             sectionName: https
     persistence:
