--- a/kubernetes/apps/media/huntarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/huntarr/app/helmrelease.yaml
@@ -48,7 +48,7 @@ spec:
         hostnames:
           - "{{ .Release.Name }}.noms.tv"
         parentRefs:
-          - name: envoy
+          - name: envoy-internal
             namespace: network
             sectionName: https
     persistence:
