--- a/kubernetes/apps/network/envoy-gateway/app/envoy.yaml
+++ b/kubernetes/apps/network/envoy-gateway/app/envoy.yaml
@@ -34,7 +34,7 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: GatewayClass
 metadata:
-  name: envoy-internal
+  name: envoy
 spec:
   controllerName: gateway.envoyproxy.io/gatewayclass-controller
   parametersRef:
