--- a/kubernetes/apps/network/cloudflare-tunnel/app/externalsecret.yaml
+++ b/kubernetes/apps/network/cloudflare-tunnel/app/externalsecret.yaml
@@ -9,7 +9,7 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: cloudflare-tunnel
+    name: cloudflare-tunnel-secret
     template:
       data:
         TUNNEL_TOKEN: |
