--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   # Flux-Kustomizations
   - ./certificates/ks.yaml
   - ./cloudflare-ddns/ks.yaml
+  - ./cloudflare-dns/ks.yaml
   - ./cloudflare-tunnel/ks.yaml
   - ./envoy-gateway/ks.yaml
   - ./external-proxy/ks.yaml
