--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -15,6 +15,7 @@ resources:
   - ./cloudflare-tunnel/ks.yaml
   - ./envoy-gateway/ks.yaml
   - ./external-proxy/ks.yaml
+  - ./fastapi-dls/ks.yaml
   # - ./lancache/ks.yaml
   - ./netbootxyz/ks.yaml
   - ./unifi-dns/ks.yaml
