fix: FastAPI should only be internal

--- a/kubernetes/apps/network/fastapi-dls/app/helmrelease.yaml
+++ b/kubernetes/apps/network/fastapi-dls/app/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
         hostnames:
           - "{{ .Release.Name }}.noms.tv"
         parentRefs:
-          - name: envoy-external
+          - name: envoy-internal
             namespace: network
             sectionName: https
     persistence:
