fix: Switch service to https?

--- a/kubernetes/apps/network/fastapi-dls/app/helmrelease.yaml
+++ b/kubernetes/apps/network/fastapi-dls/app/helmrelease.yaml
@@ -51,7 +51,7 @@ spec:
     service:
       app:
         ports:
-          http:
+          https:
             port: *port
     route:
       app:
