--- a/kubernetes/apps/default/immich/app/httproute.yaml
+++ b/kubernetes/apps/default/immich/app/httproute.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   hostnames: ["photos.noms.tv"]
   parentRefs:
-    - name: envoy-internal
+    - name: envoy-external
       namespace: network
       sectionName: https
   rules:
