--- a/kubernetes/apps/default/radicale/app/helmrelease.yaml
+++ b/kubernetes/apps/default/radicale/app/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
         hostnames:
           - "calendar.noms.tv"
         parentRefs:
-          - name: envoy-internal
+          - name: envoy-external
             namespace: network
             sectionName: https
     persistence:
