chore: Update external proxy to external GW

--- a/kubernetes/apps/network/external-proxy/app/truenas/jellyfin.yaml
+++ b/kubernetes/apps/network/external-proxy/app/truenas/jellyfin.yaml
@@ -32,7 +32,7 @@ metadata:
 spec:
   hostnames: ["jellyfin.noms.tv"]
   parentRefs:
-    - name: envoy
+    - name: envoy-external
       namespace: network
       sectionName: https
   rules:
