--- a/kubernetes/apps/network/external-proxy/app/truenas/plex.yaml
+++ b/kubernetes/apps/network/external-proxy/app/truenas/plex.yaml
@@ -32,7 +32,7 @@ metadata:
 spec:
   hostnames: ["plex.noms.tv"]
   parentRefs:
-    - name: envoy
+    - name: envoy-external
       namespace: network
       sectionName: https
   rules:
