fix: Remove range header for plex subtitle fix

--- a/kubernetes/apps/network/external-proxy/app/truenas/plex.yaml
+++ b/kubernetes/apps/network/external-proxy/app/truenas/plex.yaml
@@ -43,3 +43,8 @@ spec:
       backendRefs:
         - name: plex
           port: 80
+      filters:
+        - type: RequestHeaderModifier
+          requestHeaderModifier:
+            remove:
+              - Range
