--- a/kubernetes/apps/network/external-proxy/app/truenas/plex.yaml
+++ b/kubernetes/apps/network/external-proxy/app/truenas/plex.yaml
@@ -43,7 +43,7 @@ spec:
       backendRefs:
         - name: plex
           port: 80
-      filters:
+      filters: # Ref: https://forums.plex.tv/t/external-srt-subtitles-are-not-working-w-reverse-proxy/886540
         - type: RequestHeaderModifier
           requestHeaderModifier:
             remove:
