feat: Deploy Syncstorage-rs

--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -17,4 +17,5 @@ resources:
   - ./external-proxy/ks.yaml
   # - ./lancache/ks.yaml
   - ./netbootxyz/ks.yaml
+  - ./syncstorage-rs/ks.yaml
   - ./unifi-dns/ks.yaml
