--- a/kubernetes/apps/network/syncstorage-rs/app/externalsecret.yaml
+++ b/kubernetes/apps/network/syncstorage-rs/app/externalsecret.yaml
@@ -16,6 +16,7 @@ spec:
       data:
         METRICS_HASH_SECRET: "{{ .METRICS_HASH_SECRET }}"
         SYNC_CAPACITY: "{{ .SYNC_CAPACITY }}"
+        SYNC_URL: https://sync.noms.tv
         SYNC_MASTER_SECRET: "{{ .SYNC_MASTER_SECRET }}"
         SYNC_SYNCSTORAGE_DATABASE_URL: mysql://sync:{{ .MYSQL_PASSWORD }}@syncstorage-rs-db:3306/syncstorage_rs
         SYNC_TOKENSERVER_DATABASE_URL: mysql://sync:{{ .MYSQL_PASSWORD }}@syncstorage-rs-db:3306/tokenserver_rs
