feat: Swap Syncstorage Images

--- a/kubernetes/apps/network/syncstorage-rs/app/externalsecret.yaml
+++ b/kubernetes/apps/network/syncstorage-rs/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        METRICS_HASH_SECRET: "{{ .METRICS_HASH_SECRET }}"
+        SYNC_TOKENSERVER__FXA_METRICS_HASH_SECRET: "{{ .METRICS_HASH_SECRET }}"
         SYNC_CAPACITY: "{{ .SYNC_CAPACITY }}"
         SYNC_URL: https://sync.noms.tv
         SYNC_MASTER_SECRET: "{{ .SYNC_MASTER_SECRET }}"
