test: Change objest store for Garage

--- a/kubernetes/apps/databases/cloudnative-pg/clusters/test/objectstore.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/test/objectstore.yaml
@@ -20,3 +20,5 @@ spec:
       secretAccessKey:
         name: test-cnpg-backup-secret
         key: aws-secret-access-key
+    usePathStyle: true
+    region: garage
