chore: Update Test-DB changes

--- a/kubernetes/apps/databases/cloudnative-pg/clusters/test/externalsecret.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/test/externalsecret.yaml
@@ -59,6 +59,7 @@ spec:
       data:
         aws-access-key-id: "{{ .KeyID }}"
         aws-secret-access-key: "{{ .SecretKey }}"
+        region: garage
   dataFrom:
     - extract:
         key: garage
