test: Remove the Test cluster

--- a/kubernetes/apps/databases/cloudnative-pg/app/externalsecret.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/app/externalsecret.yaml
@@ -2,35 +2,48 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: cnpg
+  name: cnpg-admin
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: cnpg
+    name: cnpg-admin
     template:
       engineVersion: v2
+      type: kubernetes.io/basic-auth
       metadata:
         labels:
           cnpg.io/reload: "true"
-  data:
-    - secretKey: username
-      remoteRef:
+      data:
+        username: "{{ .postgresUser | toString }}"
+        password: "{{ .postgresPassword | toString }}"
+  dataFrom:
+    - extract:
         key: cloudnative-pg
-        property: postgresUser
-    - secretKey: password
-      remoteRef:
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: cnpg-app
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    name: cnpg-admin
+    template:
+      engineVersion: v2
+      type: kubernetes.io/basic-auth
+      metadata:
+        labels:
+          cnpg.io/reload: "true"
+      data:
+        username: "{{ .appUser | toString }}"
+        password: "{{ .appPassword | toString }}"
+  dataFrom:
+    - extract:
         key: cloudnative-pg
-        property: postgresPassword
-    - secretKey: aws-access-key-id
-      remoteRef:
-        key: minio
-        property: accessKeyId
-    - secretKey: aws-secret-access-key
-      remoteRef:
-        key: minio
-        property: secretAccessKey
 ---
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
@@ -53,3 +66,26 @@ spec:
   dataFrom:
     - extract:
         key: noms-tv-tls
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: cnpg-garage
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    name: cnpg-garage
+    template:
+      engineVersion: v2
+      metadata:
+        labels:
+          cnpg.io/reload: "true"
+      data:
+        ACCESS_KEY_ID: "{{ .KeyID }}"
+        ACCESS_SECRET_KEY: "{{ .SecretKey }}"
+        REGION: "{{ .Region }}"
+  dataFrom:
+    - extract:
+        key: garage
