--- a/kubernetes/apps/databases/cloudnative-pg/app/externalsecret.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/app/externalsecret.yaml
@@ -31,7 +31,7 @@ spec:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: cnpg-admin
+    name: cnpg-app
     template:
       engineVersion: v2
       type: kubernetes.io/basic-auth
