--- a/kubernetes/apps/databases/cloudnative-pg/clusters/main/cluster.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/main/cluster.yaml
@@ -15,7 +15,7 @@ spec:
   #     database: app
   #     owner: app
   #     secret:
-  #       name: main-cnpg-app-secret
+  #       name: cnpg-app
   ## First deployment end
   ## Uncomment for recovery
   bootstrap:
@@ -67,4 +67,4 @@ spec:
     size: 20Gi
     storageClass: ceph-block
   superuserSecret:
-    name: main-cnpg-admin-secret
+    name: cnpg-admin
