test: Add Managed role

--- a/kubernetes/apps/databases/cloudnative-pg/clusters/test/cluster.yaml
+++ b/kubernetes/apps/databases/cloudnative-pg/clusters/test/cluster.yaml
@@ -70,3 +70,11 @@ spec:
     storageClass: ceph-block
   superuserSecret:
     name: cnpg-admin
+
+  managed:
+    roles:
+      - name: testapp
+        ensure: present
+        login: true
+        superuser: false
+        disablePassword: true
